[gd_scene load_steps=3 format=2]

[ext_resource path="res://Entities/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Enemy.gd" type="Script" id=2]

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="4"]
radius = 15.0

[node name="Locations" type="Node" parent="." index="5"]

[node name="FOV" type="Area2D" parent="." index="6"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FOV" index="0"]

[node name="Timers" type="Node" parent="." index="7"]

[node name="MovementTimer" type="Timer" parent="Timers" index="0"]
wait_time = 2.0
one_shot = true

[node name="BattleTimer" type="Timer" parent="Timers" index="1"]

[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="FOV" to="." method="_on_FOV_body_entered"]
[connection signal="body_exited" from="FOV" to="." method="_on_FOV_body_exited"]
[connection signal="timeout" from="Timers/BattleTimer" to="." method="_on_BattleTimer_timeout"]
